--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#202240"
 backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#ADBA00"
+secondaryBackgroundColor = "f0f2f6"
 textColor = "#262730"
 font = "sans serif"
