--- a/requirements.txt
+++ b/requirements.txt
@@ -85,12 +85,12 @@ smmap==5.0.1
 stack-data==0.6.3
 streamlit==1.27.2
 tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.2
+#tensorboard==2.14.1
+#tensorboard-data-server==0.7.2
 #tensorflow==2.14.0
-tensorflow-estimator==2.14.0
+#tensorflow-estimator==2.14.0
 #tensorflow-intel==2.14.0
-tensorflow-io-gcs-filesystem==0.31.0
+#tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
 toml==0.10.2
