--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ blinker==1.6.3
 branca==0.6.0
 cachetools==5.3.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.3.1
 click==8.1.7
 click-plugins==1.1.1
 cligj==0.7.2
 colorama==0.4.6
 contourpy==1.1.1
+cryptography==41.0.7
 cycler==0.12.1
 decorator==5.1.1
 exceptiongroup==1.1.3
@@ -29,6 +31,7 @@ GitPython==3.1.40
 google-auth==2.23.3
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
+greenlet==3.0.1
 grpcio==1.59.0
 h5py==3.10.0
 idna==3.4
@@ -39,7 +42,7 @@ Jinja2==3.1.2
 joblib==1.3.2
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
-keras==2.14.0
+# keras==2.14.0
 kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5
@@ -52,6 +55,7 @@ ml-dtypes==0.2.0
 numpy==1.26.1
 oauthlib==3.2.2
 opt-einsum==3.3.0
+oracledb==1.4.2
 packaging==23.2
 pandas==2.1.1
 parso==0.8.3
@@ -59,11 +63,12 @@ pickleshare==0.7.5
 Pillow==10.1.0
 plotly==5.17.0
 prompt-toolkit==3.0.39
-protobuf==4.24.4
+protobuf==4.23.4
 pure-eval==0.2.2
 pyarrow==13.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.16.1
 pyparsing==3.1.1
@@ -82,15 +87,16 @@ scipy==1.11.3
 shapely==2.0.2
 six==1.16.0
 smmap==5.0.1
+SQLAlchemy==2.0.23
 stack-data==0.6.3
-streamlit==1.27.2
+streamlit==1.29.0
 tenacity==8.2.3
-#tensorboard==2.14.1
-#tensorboard-data-server==0.7.2
-#tensorflow==2.14.0
-#tensorflow-estimator==2.14.0
-#tensorflow-intel==2.14.0
-#tensorflow-io-gcs-filesystem==0.31.0
+# tensorboard==2.14.1
+# tensorboard-data-server==0.7.2
+tensorflow==2.14.0
+# tensorflow-estimator==2.14.0
+# tensorflow-intel==2.14.0
+# tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 threadpoolctl==3.2.0
 toml==0.10.2
